// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rewritePackageJson > should rewrite devDependencies and dependencies on npm monorepo project 1`] = `
{
  "dependencies": {
    "foo": "1.0.0",
    "tsdown": "1.0.0",
  },
  "devDependencies": {
    "@voidzero-dev/vite-plus": "latest",
  },
}
`;

exports[`rewritePackageJson > should rewrite devDependencies and dependencies on pnpm monorepo project 1`] = `
{
  "dependencies": {
    "foo": "1.0.0",
    "tsdown": "1.0.0",
  },
  "devDependencies": {
    "@voidzero-dev/vite-plus": "catalog:",
  },
}
`;

exports[`rewritePackageJson > should rewrite devDependencies and dependencies on standalone project 1`] = `
{
  "dependencies": {
    "foo": "1.0.0",
    "tsdown": "1.0.0",
  },
  "devDependencies": {
    "@voidzero-dev/vite-plus": "latest",
  },
}
`;

exports[`rewritePackageJson > should rewrite devDependencies and dependencies on yarn monorepo project 1`] = `
{
  "dependencies": {
    "foo": "1.0.0",
    "tsdown": "1.0.0",
  },
  "devDependencies": {
    "@voidzero-dev/vite-plus": "catalog:",
  },
}
`;

exports[`rewritePackageJson > should rewrite package.json scripts 1`] = `
{
  "lint-staged": {
    "*.js": [
      "vite lint --fix --type-aware",
      "vite fmt --fix",
    ],
    "*.ts": "vite fmt --fix",
  },
  "scripts": {
    "build": "pnpm install &&vite build -r && vite run build --watch && tsdown && tsc || exit 1",
    "dev": "vite dev",
    "dev_analyze": "vite dev --analyze",
    "dev_cjs": "VITE_CJS_IGNORE_WARNING=true vite dev",
    "dev_cjs_cross_env": "cross-env VITE_CJS_IGNORE_WARNING=true vite dev",
    "dev_debug": "vite dev --debug",
    "dev_help": "vite dev --help && vite dev -h",
    "dev_host": "vite dev --host 0.0.0.0",
    "dev_open": "vite dev --open",
    "dev_port": "vite dev --port 3000",
    "dev_profile": "vite dev --profile",
    "dev_stats": "vite dev --stats",
    "dev_trace": "vite dev --trace",
    "dev_verbose": "vite dev --verbose",
    "fmt": "vite fmt",
    "fmt_config": "vite fmt --config .oxfmt.json",
    "lib": "tsdown",
    "lib_watch": "tsdown --watch",
    "lint": "vite lint",
    "lint_config": "vite lint --config .oxlint.json",
    "lint_type_aware": "vite lint --type-aware",
    "optimize": "vite optimize",
    "preview": "vite preview",
    "ready": "vite lint --fix --type-aware && vite test run && tsdown && vite fmt --fix",
    "ready_env": "NODE_ENV=test FOO=bar vite lint --fix --type-aware && NODE_ENV=test FOO=bar vite test run && NODE_ENV=test FOO=bar tsdown && NODE_ENV=test FOO=bar vite fmt --fix",
    "ready_new": "vite install && vite fmt && vite lint --type-aware && vite test -r && vite build -r",
    "test": "vite test",
    "test_run": "vite test run && vite test --ui",
  },
}
`;
